salesforce/force-app/main/default/objects/Opportunity/fields/Departure_Date__c.field-meta.xml
<CustomField>
    <fullName>Departure_Date__c</fullName>
    <label>Departure Date</label>
    <description>Latest check-out date from related bookings. Note: Must be populated by automation (Flow/Trigger) as cross-object MAX formula not supported.</description>
    <type>Date</type>
</CustomField>