salesforce/force-app/main/default/objects/Opportunity/fields/Payment_ID__c.field-meta.xml
<CustomField>
    <fullName>Payment_ID__c</fullName>
    <label>Payment ID</label>
    <description>Stripe charge ID for payment reconciliation. Format: ch_XXXXXXXXXXXXXXX. Updated when payment is successfully processed during checkout. External ID for faster lookups.</description>
    <externalId>true</externalId>
    <length>100</length>
    <type>Text</type>
</CustomField>