salesforce/force-app/main/default/objects/Opportunity/fields/Total_Nights__c.field-meta.xml
<CustomField>
    <fullName>Total_Nights__c</fullName>
    <label>Total Nights</label>
    <description>Sum of nights from all related bookings</description>
    <summarizedField>Booking__c.Total_Nights__c</summarizedField>
    <summaryForeignKey>Booking__c.Opportunity__c</summaryForeignKey>
    <summaryOperation>sum</summaryOperation>
    <type>Summary</type>
</CustomField>